--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@59naga/babel-plugin-transform-string-raw",
+  "name": "babel-plugin-transform-string-raw",
   "description": "replace `String.raw` with an ponyfill function",
   "version": "0.0.0",
   "main": "lib",
@@ -69,7 +69,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/59naga/babel-plugin-transform-string-raw.git"
+    "url": "https://github.com/josephfrazier/babel-plugin-transform-string-raw.git"
   },
   "keywords": [
     "babel-plugin",
@@ -80,7 +80,7 @@
   "author": "59naga <i59naga@icloud.com> (http://berabou.me/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/59naga/babel-plugin-transform-string-raw/issues"
+    "url": "https://github.com/josephfrazier/babel-plugin-transform-string-raw/issues"
   },
-  "homepage": "https://github.com/59naga/babel-plugin-transform-string-raw#readme"
+  "homepage": "https://github.com/josephfrazier/babel-plugin-transform-string-raw#readme"
 }
