--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cover:test": "nyc --reporter=lcov --reporter=text abby mocha",
     "cover:report": "npm-if TRAVIS \"codeclimate-test-reporter < coverage/lcov.info\"",
     "lint": "eslint src test",
+    "prepare": "abby test, build",
     "build": "abby \"babel -V && babel src --out-dir lib --source-maps\" --env"
   },
   "nyc": {
