Increase test timeout to fix Travis builds on Node v4
See https://github.com/josephfrazier/babel-plugin-transform-string-raw/pull/1#issuecomment-371350118

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "watch:test": "babel test --out-dir spec --watch",
     "compile": "babel -V && babel src --out-dir lib && babel test --out-dir spec",
     "test": "abby lint, compile, cover",
-    "mocha": "mocha 'spec/**/*.js'",
+    "mocha": "mocha --timeout 5000 'spec/**/*.js'",
     "cover": "abby cover:* --parse serial",
     "cover:test": "nyc --reporter=lcov --reporter=text abby mocha",
     "lint": "eslint src test",
